--- a/finalPro/pom.xml
+++ b/finalPro/pom.xml
@@ -23,7 +23,23 @@
 	</repositories>
 	<!-- 추가1 끝 -->
 	<dependencies>
+		<!-- 추가3 -->
+		<!-- JSON -->
+		<!--에러나면 최신버전 다운해서 사용  -->
+		<dependency>
+			<groupId>net.sf.json-lib</groupId>
+			<artifactId>json-lib-ext-spring</artifactId>
+			<version>1.0.2</version>
+		</dependency>
+		<!-- https://mvnrepository.com/search?q=json-simple 여기서검색 -->
 
+		<!-- https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple -->
+		<dependency>
+			<groupId>com.googlecode.json-simple</groupId>
+			<artifactId>json-simple</artifactId>
+			<version>1.1.1</version>
+		</dependency>
+		<!-- 추가3 끝 -->
 		<!-- Spring -->
 		<dependency>
 			<groupId>org.springframework</groupId>
