--- a/finalPro/pom.xml
+++ b/finalPro/pom.xml
@@ -25,7 +25,7 @@
 	<dependencies>
 		<!-- 추가3 -->
 		<!-- JSON -->
-		<!--에러나면 최신버전 다운해서 사용  -->
+		<!--에러나면 최신버전 다운해서 사용 -->
 		<dependency>
 			<groupId>net.sf.json-lib</groupId>
 			<artifactId>json-lib-ext-spring</artifactId>
@@ -146,7 +146,20 @@
 			<version>1.4</version>
 		</dependency>
 		<!-- 추가2 끝 -->
+		<!-- 추가4 -->
+		<!-- FileUpload -->
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.4</version>
+		</dependency>
 
+		<dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<version>1.2.1</version>
+		</dependency>
+		<!-- 추가4 끝 -->
 		<!-- Servlet -->
 		<dependency>
 			<groupId>javax.servlet</groupId>
